--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 6 months ago
 
 aula-07
-            <img src="img/cenario-passo0(1).png" alt="">
+            <img src="cenario-passo0(1).png" alt="">
 6 months ago
 
 projeto final
@@ -43,7 +43,7 @@ aula-07
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
+            <img src="cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
             <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
                 encontrado.</p>
         </div>
@@ -86,7 +86,7 @@ aula-07
 5 days ago
 
 ajuste nome da imagem
-            <img src="img/cenario-passo11-cidade-perdida(1).png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
+            <img src="cenario-passo11-cidade-perdida(1).png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
 6 months ago
 
 aula-07
