--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-6 months ago
-
-aula-07
-            <img src="cenario-passo0(1).png" alt="">
-6 months ago
-
-projeto final
+            <img src="img/cenario-passo0.png" alt="">
             <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
             <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
             <button class="btn-proximo" data-proximo="2">Pernambuco</button>
@@ -33,9 +27,6 @@ projeto final
             <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
             <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
         </div>
-6 months ago
-
-aula-07
         <div class="passo" id="passo-3">
             <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está
                 localizada no Amazonas.</p>
@@ -43,7 +34,7 @@ aula-07
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
+            <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
             <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
                 encontrado.</p>
         </div>
@@ -83,13 +74,7 @@ aula-07
         </div>
 
         <div class="passo" id="passo-11">
-5 days ago
-
-ajuste nome da imagem
-            <img src="cenario-passo11-cidade-perdida(1).png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
-6 months ago
-
-aula-07
+            <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
             <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
                 este lugar</p>
         </div>
@@ -99,13 +84,7 @@ aula-07
                 que levam à cidade perdida.</p>
             <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
         </div>
-6 months ago
-
-projeto final
     </main>
     <script src="script.js"></script>
 </body>
-5 days ago
-
-ajuste nome da imagem
 </html>
